--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -238,6 +238,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.119.162.10;
 allow 185.100.85.132;
 allow 185.100.85.24;
 allow 185.100.85.25;
@@ -554,7 +555,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.237.155.109;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.239.232.235;
@@ -583,7 +583,9 @@ allow 195.246.231.197;
 allow 195.47.238.177;
 allow 195.47.238.178;
 allow 195.47.238.44;
+allow 195.47.238.90;
 allow 195.47.238.91;
+allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -842,6 +844,7 @@ allow 23.137.248.100;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
+allow 23.137.255.85;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.177.185.98;
@@ -907,7 +910,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1339,7 +1341,9 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:4d00:2:8::2;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
@@ -1520,7 +1524,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1792,6 +1795,7 @@ allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.94.51.243;
 allow 93.95.227.37;
+allow 93.95.228.105;
 allow 93.95.228.125;
 allow 93.95.231.118;
 allow 93.95.231.14;
