--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -651,6 +651,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
@@ -723,7 +724,6 @@ set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
-set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
 set_real_ip_from 2a14:c380:50:62::a;
