--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -387,6 +387,7 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
+deny 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
@@ -671,6 +672,7 @@ deny 2a12:a800:1:1:2:58:56:43;
 deny 2a12:a800:1:1:2:58:56:93;
 deny 2a12:a800:1:1:45:154:98:33;
 deny 2a12:a800:2:1:185:241:208:115;
+deny 2a12:a800:2:1:185:241:208:185;
 deny 2a12:a800:2:1:185:241:208:71;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:185:241:208:82;
@@ -722,4 +724,5 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:20::a;
+deny 2a14:c380:50:60::a;
 deny 2a14:c380:50:62::a;
