--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -43,7 +43,6 @@ allow 107.174.146.25;
 allow 107.175.93.157;
 allow 107.189.10.175;
 allow 107.189.11.111;
-allow 107.189.1.16;
 allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.12.3;
@@ -196,14 +195,12 @@ allow 173.224.219.44;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
 allow 176.65.149.105;
-allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
@@ -768,7 +765,6 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
-allow 213.111.148.42;
 allow 213.111.150.96;
 allow 216.239.90.19;
 allow 216.73.159.101;
@@ -913,6 +909,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1102,7 +1099,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1170,12 +1166,10 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
-allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1371,7 +1365,6 @@ allow 2a0d:bbc7::f816:3eff:fe84:8a9e;
 allow 2a0d:bbc7::f816:3eff:fec7:9bc8;
 allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
-allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
@@ -1416,6 +1409,7 @@ allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
+allow 2a0f:85c1:8d2:c2e8::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1505,6 +1499,7 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
+allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
@@ -1532,6 +1527,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1547,6 +1543,7 @@ allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
 allow 38.97.116.245;
+allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1557,6 +1554,7 @@ allow 45.133.73.14;
 allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
+allow 45.137.201.26;
 allow 45.137.201.31;
 allow 45.137.70.158;
 allow 45.138.16.107;
@@ -1619,7 +1617,6 @@ allow 45.84.107.172;
 allow 45.84.107.174;
 allow 45.84.107.182;
 allow 45.84.107.198;
-allow 45.84.107.200;
 allow 45.84.107.222;
 allow 45.84.107.33;
 allow 45.84.107.47;
@@ -1628,6 +1625,7 @@ allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.84.107.97;
+allow 45.86.153.248;
 allow 45.88.186.89;
 allow 45.88.186.92;
 allow 45.91.250.107;
@@ -1752,7 +1750,6 @@ allow 82.221.131.71;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
-allow 82.96.141.198;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1831,6 +1828,5 @@ allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.211.174.137;
 allow 95.211.244.28;
-allow 96.8.119.172;
 allow 97.90.239.170;
 allow 98.128.173.33;
